--- a/css/jquery.stepy.css
+++ b/css/jquery.stepy.css
@@ -3,14 +3,27 @@
 .button-back { float: left; }
 .button-next, .finish { float: right; }
 .button-back, .button-next, .finish {
-	border: 1px solid #C9C4BA; color: #7F0055; cursor: pointer; font: 10px verdana; padding: 3px 10px; text-decoration: none;
-	-khtml-border-radius: 3px; -moz-border-radius: 3px; -opera-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
+	border: 1px solid #C9C4BA; 
+	color: #7F0055; 
+	cursor: pointer; 
+	font: 10px verdana; 
+	padding: 3px 10px; 
+	text-decoration: none;
+	-khtml-border-radius: 3px; 
+	-moz-border-radius: 3px; 
+	-opera-border-radius: 3px; 
+	-webkit-border-radius: 3px; 
+	border-radius: 3px;
 }
+
 .button-back:hover, .button-next:hover, .finish:hover { border-color: #DFDCD6; color: #B07; }
 
 .step {
 	border: 1px solid #DDD; clear: left; font: 10px verdana; width:650px;
-	-khtml-border-radius: 3px; -moz-border-radius: 3px; -opera-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
+	-khtml-border-radius: 3px; -moz-border-radius: 3px; -opera-border-radius: 3px;
+	 -webkit-border-radius: 3px; border-radius: 3px;
+	 padding:10px 10px 30px;
+	 position: relative;
 }
 .step label { color: #444; display: block; font: bold 10px verdana; margin: 10px 0 3px 7px; }
 .step legend { color: #4080BF; font: bold 14px verdana; padding: 0 2px 3px 2px; }
