--- a/css/wizard.less
+++ b/css/wizard.less
@@ -14,7 +14,8 @@
 	   		 padding:2px 6px;
 	    	height:auto;
 	    	background:#bbb;
-	    	color:#fff; 
+	    	color:#fff;
+	    	cursor:pointer;
 		 }
 		 &[type="text"]{
 		 	 box-shadow:inset 0 -2px 5px #eee;
