--- a/css/wizard.less
+++ b/css/wizard.less
@@ -17,13 +17,22 @@
 	    	color:#fff;
 	    	cursor:pointer;
 		 }
-		 &[type="text"]{
+		 &[type="submit"]{
+		 	 height:auto;
+		 }
+		 &[type="text"], &[type="tel"], &[type="email"]{
 		 	 box-shadow:inset 0 -2px 5px #eee;
 		 	 width: auto;
 		 	 display: inline;
 		 	 float: none;
 		 	 margin-bottom: 5px;
 		 }
+		}
+
+		textarea{
+			padding:5px 8px;
+			resize:none;
+			height:100px;
 		} 
 
 	
